Fixing issues with spacing and pair of cell selection

--- a/minerva_analysis/client/src/css/neighborhood.css
+++ b/minerva_analysis/client/src/css/neighborhood.css
@@ -596,3 +596,7 @@
 #search-row .row {
     margin-left: 5px !important;
 }
+
+.heatmapHoverRect:active {
+    pointer-events: none;
+}
